test/scc/pp/errors/021.t
#define A(a, b, c, d)
A(1, 2, 3, 4, 5)